# UltraskateDashboard

./: .gitignore  API_README.md  README.md  Roadmap.md  browser_state.json  dashboard_app.py  event_params_data.py  event_stats.py  event_stats_2013.csv  event_stats_2014.csv  event_stats_2015.csv  event_stats_2016.csv  event_stats_2017.csv  event_stats_2018.csv  event_stats_2019.csv  event_stats_2020.csv  event_stats_2021.csv  event_stats_2022.csv  event_stats_2023.csv  event_stats_2024.csv  event_stats_2025.csv  events_details.txt  main.py  notes.md  properties.py  pyproject.toml  requirements.txt  run_api.py  test.html  test.py  ultraskate_miami_2013.json  ultraskate_miami_2014.json  ultraskate_miami_2015.json  ultraskate_miami_2018.json  ultraskate_miami_2019.json  ultraskate_miami_2022.json  ultraskate_miami_2024.json  utils.py
api/: app.py
classes/: Athlete.py  AthleteRegistry.py  AthleteStatsProcessor.py  Event.py  EventAthleteStats.py  EventManager.py  EventRegistry.py  HTMLParser.py  Performance.py  Skater.py  Track.py  TrackOption.py  Ultraskate.py  Utils.py  Webscraper.py
data/: backup_events.json  events.json  events_urls.py  info_table_fields.csv  info_table_fields.xlsx  ~$info_table_fields.xlsx
models/: athlete.py  athlete_registry.py  event.py  event_params.py  event_registry.py  performance.py  track.py
registries/: AthleteRegistry.py  EventRegistry.py
scraped_events/: ultraskate_miami_2013.json  ultraskate_miami_2014.json  ultraskate_miami_2015.json  ultraskate_miami_2016.json  ultraskate_miami_2017.json  ultraskate_miami_2018.json  (+3 more)
(+29 files in other folders)
