[project]
name = "ultraskate-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fuzzywuzzy>=0.18.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
]
